# cppl-homeworks

./: README.md
01/: readme.md
01/01/: readme.md
01/02/: readme.md
01/03/: readme.md
02/: readme.md
02/01/: readme.md
02/02/: readme.md
03/: readme.md
03/01/: readme.md
03/02/: readme.md
04/: readme.md
04/01/: readme.md
04/02/: readme.md
05/: readme.md
05/01/: readme.md
05/02/: readme.md
05/03/: readme.md
06/: readme.md
06/01/: readme.md
07/: readme.md
07/01/: readme.md
07/02/: readme.md
07/03/: readme.md
08/: readme.md
08/01/: readme.md
08/02/: readme.md
10/: readme.md
10/01/: readme.md
10/02/: readme.md
10/03/: readme.md
11/: readme.md
11/01/: readme.md
11/02/: readme.md
common/catch2/: readme.md
common/catch2/DemoCatch2Vcpkg/: CMakeLists.txt  README.md
common/catch2/DemoCatch2Vcpkg/img/: vcpkg_install_catch2.tape
common/catch2/DemoCatch2Vendoring/: CMakeLists.txt  README.md  main.cpp
common/instr /: readme.md
instr"/: Новшества C++"
Нововведения C++11/1. Ключевое слово auto/: readme.md
Нововведения C++11/2. Range based for/: readme.md
Нововведения C++11/3. Лямбда-функции/: readme.md
Нововведения C++11/4. Спецификаторы override и final/: readme.md
Нововведения C++11/5. Семантика перемещения/: readme.md
Нововведения C++11/6. Умные указатели/: readme.md
Нововведения C++11/7. Кортежи/: readme.md
Нововведения C++11/8. Constexpr/: readme.md
Нововведения C++14/: readme.md
Нововведения С++ 11/: 1. Ключевое слово auto
Нововведения С++ 17/: readme.md
(+1 files in other folders)
